seperated boardEditor in to smaller editors

--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -23,12 +23,16 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="BoardEditor.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="CardEditor.cpp" />
     <ClCompile Include="Deck.cpp" />
+    <ClCompile Include="DeckEditor.cpp" />
     <ClCompile Include="DeckManager.cpp" />
+    <ClCompile Include="DiceEditor.cpp" />
     <ClCompile Include="DropDownInput.cpp" />
     <ClCompile Include="DropDownMenu.cpp" />
     <ClCompile Include="EditorWorkspace.cpp" />
     <ClCompile Include="ElementSelection.cpp" />
+    <ClCompile Include="GameDataManager.cpp" />
     <ClCompile Include="GameEditor.cpp" />
     <ClCompile Include="GlobalVariables.cpp" />
     <ClCompile Include="CardInfo.cpp" />
@@ -41,6 +45,7 @@
     <ClCompile Include="MouseHandler.cpp" />
     <ClCompile Include="PathManager.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerEditor.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="SpriteHandler.cpp" />
     <ClCompile Include="stdafx.cpp" />
@@ -59,12 +64,16 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="BoardEditor.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="CardEditor.h" />
     <ClInclude Include="Deck.h" />
+    <ClInclude Include="DeckEditor.h" />
     <ClInclude Include="DeckManager.h" />
+    <ClInclude Include="DiceEditor.h" />
     <ClInclude Include="DropDownInput.h" />
     <ClInclude Include="DropDownMenu.h" />
     <ClInclude Include="EditorWorkspace.h" />
     <ClInclude Include="ElementSelection.h" />
+    <ClInclude Include="GameDataManager.h" />
     <ClInclude Include="GameEditor.h" />
     <ClInclude Include="GlobalVariables.h" />
     <ClInclude Include="CardInfo.h" />
@@ -75,6 +84,7 @@
     <ClInclude Include="MenuBar.h" />
     <ClInclude Include="MouseHandler.h" />
     <ClInclude Include="PathManager.h" />
+    <ClInclude Include="PlayerEditor.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="SpriteHandler.h" />
     <ClInclude Include="Struct_CtorParam.h" />
