more bugfixing and code remactoring

--- a/BroodMaker/BroodMaker.vcxproj
+++ b/BroodMaker/BroodMaker.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="DropDownMenu.cpp" />
     <ClCompile Include="EditorWorkspace.cpp" />
     <ClCompile Include="ElementSelection.cpp" />
+    <ClCompile Include="FileAccess.cpp" />
     <ClCompile Include="GameDataManager.cpp" />
     <ClCompile Include="GameEditor.cpp" />
     <ClCompile Include="GlobalVariables.cpp" />
@@ -49,7 +50,6 @@
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="SpriteHandler.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="Struct_CtorParam.cpp" />
     <ClCompile Include="Path.cpp" />
     <ClCompile Include="TextBox.cpp" />
     <ClCompile Include="TileEditor.cpp" />
@@ -74,6 +74,7 @@
     <ClInclude Include="DropDownMenu.h" />
     <ClInclude Include="EditorWorkspace.h" />
     <ClInclude Include="ElementSelection.h" />
+    <ClInclude Include="FileAccess.h" />
     <ClInclude Include="GameDataManager.h" />
     <ClInclude Include="GameEditor.h" />
     <ClInclude Include="GlobalVariables.h" />
@@ -87,7 +88,6 @@
     <ClInclude Include="PlayerEditor.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="SpriteHandler.h" />
-    <ClInclude Include="Struct_CtorParam.h" />
     <ClInclude Include="Path.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="stdafx.h" />
